--- a/marketing-resource/json/home/features/leftnav/app-service.json
+++ b/marketing-resource/json/home/features/leftnav/app-service.json
@@ -1,4 +1,4 @@
-{"service": "App service", 
+{"service": "App Service", 
 "id": "leftnav_product_app-service", 
 "navigation": 
 [
@@ -8,28 +8,28 @@
 		[
 			{"link": "/home/features/app-service/", 
 			"id": "leftnav_product_app-service_function", 
-			"title": "App service"}, 
+			"title": "App Service"}, 
 			{"link": "/home/features/app-service/web-apps/", 
 			"id": "leftnav_product_app-service_web-apps", 
-			"title": "- Web app"}, 
+			"title": "- Web Apps"}, 
 			{"link": "/home/features/app-service/mobile-apps/", 
 			"id": "leftnav_product_app-service_mobile-apps", 
-			"title": "- Mobile app"}, 
+			"title": "- Mobile Apps"}, 
 			{"link": "/home/features/app-service/api-apps/", 
 			"id": "leftnav_product_app-service_api-apps", 
-			"title": "- API app"}, 
+			"title": "- API Apps"}, 
 			{"link": "/pricing/details/app-service/", 
 			"id": "leftnav_product_app-service_pricing", 
-			"title": "Price details"},
+			"title": "Pricing details"},
 			{"link": "/pricing/calculator/app-service/", 
 			"id": "leftnav_product_app-service_calculator", 
-			"title": "Price calculator"},
+			"title": "Pricing calculator"},
 			{"link": "https://docs.azure.cn/app-service/", 
 			"id": "leftnav_product_app-service_documentation", 
 			"title": "Documentation"},
 			{"link": "/support/sla/app-service/", 
 			"id": "leftnav_product_app-service_sla", 
-			"title": "Service level agreement"}
+			"title": "Service Level Agreement"}
 		]
 	}, 
 	{"group": "Related products", 
@@ -38,71 +38,71 @@
 		[
 			{"link": "/home/features/virtual-machines/", 
 			"id": "leftnav_product_app-service_virtual-machines_function", 
-			"title": "Virtual machine"}, 
+			"title": "Virtual Machines"}, 
 			{"link": "/home/features/storage/", 
 			"id": "leftnav_product_app-service_storage_function", 
 			"title": "Storage"},
 			{"link": "/home/features/virtual-network/", 
 			"id": "leftnav_product_app-service_networking_function", 
-			"title": "Virtual network"},
+			"title": "Virtual Network"},
 			{"link": "/home/features/cloud-services/", 
 			"id": "leftnav_product_app-service_cloud-services_function", 
-			"title": "Cloud services"}
+			"title": "Cloud Services"}
 		]
 	}, 
 	
-	{"group": "Related documentation and links", 
+	{"group": "Related Documentation and Links", 
 	"id": "leftnav_product_app-service_others", 
 	"articles": 
 		[
 			{"link": "/solutions/web/", 
 			"id": "leftnav_product_app-service_solutions_web", 
-			"title": "Web app solutions"}, 
+			"title": "Web Apps Solutions"}, 
 			{"link": "/solutions/mobile-services/", 
 			"id": "leftnav_product_app-service_solutions_mobile-services", 
-			"title": "Mobile service solutions"}, 											
+			"title": "Mobile Services Solutions"}, 											
 			{"link": "/solutions/dev-test/", 
 			"id": "leftnav_product_app-service_solutions_dev-test", 
-			"title": "Development and testing solutions"},			
+			"title": "Development and Testing Solutions"},			
 			{"link": "/solutions/storage-backup-recovery-plan/", 
 			"id": "leftnav_product_app-service_solutions_storage-backup-recovery-plan", 
-			"title": "Storage, backup and restore solutions"},															
+			"title": "Storage, Backup and Restore Solutions"},															
 			{"link": "https://docs.azure.cn/zh-cn/app-service/app-service-how-works-readme/", 
 			"id": "leftnav_product_app-service_articles_app-service-how-works-readme", 
-			"title": "App service operations"},		
+			"title": "App Service Operations"},		
 			{"link": "https://docs.azure.cn/zh-cn/app-service/app-service-value-prop-what-is/", 
 			"id": "leftnav_product_app-service_articles_app-service-value-prop-what-is", 
 			"title": "Introduction to Azure App Services"},			
 			{"link": "https://docs.azure.cn/zh-cn/app-service-api/app-service-api-apps-why-best-platform/", 
 			"id": "leftnav_product_app-service_articles_app-service-api-apps-why-best-platform", 
-			"title": "API app overview"},
+			"title": "API Apps Overview"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-api/app-service-api-dotnet-get-started/", 
 			"id": "leftnav_product_app-service_articles_app-service-api-dotnet-get-started", 
-			"title": "Azure App Services basics"},			
+			"title": "Getting Started with Azure App Service"},			
 			{"link": "/documentation/articles/app-service-api-java-api-app/", 
 			"id": "leftnav_product_app-service_articles_app-service-api-java-api-app", 
-			"title": "Generate and deploy a Java API app"},
+			"title": "Generate and deploy a Java API App"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-api/app-service-api-nodejs-api-app/", 
 			"id": "leftnav_product_app-service_articles_app-service-api-nodejs-api-app", 
 			"title": "Build and deploy a Node.js RESTful API"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-api/app-service-api-cors-consume-javascript/", 
 			"id": "leftnav_product_app-service_articles_app-service-api-cors-consume-javascript", 
-			"title": "Supporting CORS use of the API app"},
+			"title": "Supporting CORS use of API Apps"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-mobile/app-service-mobile-android-get-started/", 
 			"id": "leftnav_product_app-service_articles_app-service-mobile-android-get-started", 
-			"title": "Creating an Android app"},
+			"title": "Creating an Android App"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-mobile/app-service-mobile-ios-get-started/", 
 			"id": "leftnav_product_app-service_articles_app-service-mobile-ios-get-started", 
-			"title": "Creating an iOS app"},
+			"title": "Creating an iOS App"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-mobile/app-service-mobile-windows-store-dotnet-get-started/", 
 			"id": "leftnav_product_app-service_articles_app-service-mobile-windows-store-dotnet-get-started", 
-			"title": "Creating a Windows app"},
+			"title": "Creating a Windows App"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-mobile/app-service-mobile-xamarin-android-get-started/", 
 			"id": "leftnav_product_app-service_articles_app-service-mobile-xamarin-android-get-started", 
-			"title": "Creating an Xamarin.Android app"},
+			"title": "Creating an Xamarin.Android App"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-mobile/app-service-mobile-android-get-started/", 
 			"id": "leftnav_product_app-service_articles_app-service-mobile-cordova-get-started", 
-			"title": "Creating an Apache Cordova app"}
+			"title": "Creating an Apache Cordova App"}
 		]
 	}
 ]
