--- a/marketing-resource/json/home/features/leftnav/app-service.json
+++ b/marketing-resource/json/home/features/leftnav/app-service.json
@@ -79,7 +79,7 @@
 			{"link": "https://docs.azure.cn/zh-cn/app-service-api/app-service-api-dotnet-get-started/", 
 			"id": "leftnav_product_app-service_articles_app-service-api-dotnet-get-started", 
 			"title": "Getting Started with Azure App Service"},			
-			{"link": "/documentation/articles/app-service-api-java-api-app/", 
+			{"link": "//docs.azure.cn/zh-cn/app-service/app-service-web-tutorial-rest-api/", 
 			"id": "leftnav_product_app-service_articles_app-service-api-java-api-app", 
 			"title": "Generate and deploy a Java API Apps"},
 			{"link": "https://docs.azure.cn/zh-cn/app-service-api/app-service-api-nodejs-api-app/", 
