--- a/acn-resources/en-required/en-us,home,features,leftnav,logic-apps.json
+++ b/acn-resources/en-required/en-us,home,features,leftnav,logic-apps.json
@@ -11,7 +11,7 @@
 			"title": "Product overview"}, 
 			{"link": "/pricing/details/logic-apps/", 
 			"id": "leftnav_product_logic-apps_pricing", 
-			"title": "Pricing details"},
+			"title": "Pricing"},
 			{"link": "/pricing/calculator/logic-apps/", 
 			"id": "leftnav_product_logic-apps_calculator", 
 			"title": "Pricing calculator"},
@@ -39,16 +39,16 @@
 			
 			{"link": "//docs.azure.cn/zh-cn/logic-apps/logic-apps-overview/", 
 			"id": "leftnav_product_logic-apps-overview", 
-			"title": "What is an Azure Logic Apps?"},
+			"title": "What is Azure Logic Apps"},
 			{"link": "//docs.azure.cn/zh-cn/connectors/apis-list/", 
 			"id": "leftnav_product_logic-apps-apis-list", 
-			"title": "Connector for Azure Logic Applications"},
+			"title": "Connectors suitable for Azure Logic Apps"},
 			{"link": "//docs.azure.cn/zh-cn/logic-apps/quickstart-create-first-logic-app-workflow/", 
 			"id": "leftnav_product_logic-apps-quickstart-create-first-logic-app-workflow", 
-			"title": "Quick Start: Creating the first automated workflow with Azure Logic Applications"},
+			"title": "Quick Start: Creating the first automated workflow with Azure Logic Apps"},
 			{"link": "//docs.azure.cn/zh-cn/logic-apps/logic-apps-control-flow-conditional-statement/", 
 			"id": "leftnav_product_logic-apps-control-flow-conditional-statement", 
-			"title": "Create conditional statements that control workflow actions in Azure Logic applications"}		
+			"title": "Create conditional statements that control workflow actions in Azure Logic Apps"}		
 		]
 	}
 ]
